almost fixed the gaps from top and bottom when resizing, by adding overflow and adjusting the credit as footer

--- a/responsive/survey/app/css/survey.css
+++ b/responsive/survey/app/css/survey.css
@@ -1,24 +1,24 @@
 body {
   font-family: Tahoma;
-}
-
-
-.grid-container {
-  display: grid;
-  grid-template-areas: "main-box";
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
-  width: 100vw;
+  overflow: auto; 
+  display: flex;
   height: 100vh;
-  align-items: center;
+  flex-direction: column;
   background-color: #9497a7;
-
-
+  align-items: center;
+  justify-content: center;
 }
+
+.credit-footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-column-start: 1;
+grid-column-end: -1;}
 
 .grid-main {
-  grid-area: main-box;
   justify-self: center;
+  align-self: center;
   display: grid;
   grid-template-areas:
     "nav form";
@@ -29,8 +29,6 @@ body {
   align-items: center;
   background-color: yellow;
   border-radius: 25px;
-
-
 }
 
 
@@ -568,7 +566,6 @@ grid-template-rows: repeat(2, 1fr);
 @media only screen and (max-width: 800px) {
 
   .grid-main {
-    grid-area: main-box;
     justify-self: center;
     display: grid;
     grid-template-areas:
